--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cool Guy Music Extravaganza</title>
+  <title>ZTV</title>
   <script src="https://www.youtube.com/iframe_api" async defer></script>
 </head>
 <body>
-  <h1>Cool Guy Music Extravaganza</h1>
+  <h1>ZTV</h1>
   <div id="now-playing" style="font-weight: bold; margin-bottom: 10px;"></div>
   <div id="player"></div>
   <br>
