--- a/index.html
+++ b/index.html
@@ -2,16 +2,102 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ZTV</title>
-  <script src="https://www.youtube.com/iframe_api" async defer></script>
+  <title>Cool Guy Music Mix</title>
+  <style>
+    body {
+      background-color: black;
+      color: limegreen;
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 20px; /* Bigger text */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    #winamp-player {
+      width: 512px; /* Bigger box */
+      background-color: black;
+      color: limegreen;
+      padding: 16px;
+      border: 2px solid gray;
+      text-align: center;
+      overflow: hidden;
+    }
+
+    #now-playing-wrapper {
+      width: 100%;
+      overflow: hidden;
+      white-space: nowrap;
+      position: relative;
+      height: 32px; /* Bigger now-playing bar */
+      margin-bottom: 16px;
+    }
+
+    #now-playing {
+      display: inline-block;
+      position: absolute;
+      left: 0;
+      top: 0;
+      white-space: nowrap;
+    }
+
+    .scrolling {
+      animation: scroll-text 10s linear infinite;
+    }
+
+    @keyframes scroll-text {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
+
+    #controls {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      margin-bottom: 16px;
+    }
+
+    #controls button {
+      background-color: #222;
+      color: limegreen;
+      border: 1px solid gray;
+      font-size: 16px; /* Bigger buttons */
+      padding: 8px 16px;
+      cursor: pointer;
+      margin: 4px;
+    }
+
+    #controls button:hover {
+      background-color: limegreen;
+      color: black;
+    }
+
+    #player {
+      margin-top: 10px;
+      display: none;
+      width: 512px;
+      height: 288px; /* Aspect ratio 16:9 */
+    }
+  </style>
 </head>
 <body>
-  <h1>ZTV</h1>
-  <div id="now-playing" style="font-weight: bold; margin-bottom: 10px;"></div>
-  <div id="player"></div>
-  <br>
-  <button onclick="nextSong()">NEXT</button>
 
-  <script src="script.js"></script>
+<div id="winamp-player">
+  <div id="now-playing-wrapper">
+    <div id="now-playing">Loading...</div>
+  </div>
+  <div id="controls">
+    <button onclick="prevSong()">Prev</button>
+    <button onclick="shuffleSong()">Play/Shuffle</button>
+    <button onclick="nextSong()">Next</button>
+    <button onclick="toggleVideo()">Show/Hide Video</button>
+  </div>
+  <div id="player"></div> <!-- YouTube iframe -->
+</div>
+
+<script src="script.js"></script>
+
 </body>
 </html>
