--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       background-color: black;
       color: limegreen;
       font-family: 'Courier New', Courier, monospace;
-      font-size: 20px; /* Bigger text */
+      font-size: 20px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -16,14 +16,84 @@
       margin: 0;
     }
 
-    #winamp-player {
-      width: 512px; /* Bigger box */
+    #winamp-container {
+      display: flex;
       background-color: black;
-      color: limegreen;
-      padding: 16px;
       border: 2px solid gray;
+      padding: 16px;
+      width: 900px;
+      font-family: 'Courier New', Courier, monospace;
+      color: limegreen;
+    }
+
+    #album-info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-right: 16px;
+    }
+
+    #album-art {
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      margin-bottom: 8px;
+      border: 2px solid limegreen;
+      border-radius: 0px; /* square frame */
+      box-shadow: 0 0 10px limegreen;
+      transition: box-shadow 0.3s ease;
+    }
+
+    #album-art:hover {
+      box-shadow: 0 0 20px white;
+    }
+
+    #album-name, #album-year {
       text-align: center;
-      overflow: hidden;
+      font-size: 14px;
+    }
+
+    #artist-summary {
+  font-style: italic;
+  font-size: 1rem;
+  color: #ccc;
+  margin-top: 0.5rem;
+  line-height: 1.4;
+}
+
+
+    #equalizer {
+      display: flex;
+      justify-content: center;
+      margin-top: 10px;
+      height: 20px;
+    }
+
+    .bar {
+      width: 4px;
+      height: 100%;
+      margin: 0 2px;
+      background: limegreen;
+      animation: equalizer 1s infinite;
+    }
+
+    .bar:nth-child(1) { animation-delay: 0s; }
+    .bar:nth-child(2) { animation-delay: 0.1s; }
+    .bar:nth-child(3) { animation-delay: 0.2s; }
+    .bar:nth-child(4) { animation-delay: 0.3s; }
+    .bar:nth-child(5) { animation-delay: 0.4s; }
+
+    @keyframes equalizer {
+      0% { transform: scaleY(1); }
+      50% { transform: scaleY(2); }
+      100% { transform: scaleY(1); }
+    }
+
+    #music-player {
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     #now-playing-wrapper {
@@ -31,7 +101,7 @@
       overflow: hidden;
       white-space: nowrap;
       position: relative;
-      height: 32px; /* Bigger now-playing bar */
+      height: 32px;
       margin-bottom: 16px;
     }
 
@@ -63,7 +133,7 @@
       background-color: #222;
       color: limegreen;
       border: 1px solid gray;
-      font-size: 16px; /* Bigger buttons */
+      font-size: 16px;
       padding: 8px 16px;
       cursor: pointer;
       margin: 4px;
@@ -76,25 +146,44 @@
 
     #player {
       margin-top: 10px;
-      display: none;
-      width: 512px;
-      height: 288px; /* Aspect ratio 16:9 */
+      width: 560px;
+      height: 315px;
+      display: block;
     }
   </style>
 </head>
 <body>
 
-<div id="winamp-player">
-  <div id="now-playing-wrapper">
-    <div id="now-playing">Loading...</div>
+<div id="winamp-container">
+  <div id="album-info">
+    <img id="album-art" src="default_album.png" alt="Album Art">
+    <div id="album-name">Loading Album...</div>
+    <div id="album-year">Loading Year...</div>
+    <div id="artist-summary" style="max-width: 600px;"></div>
+<button id="summary-toggle" style="display: none; margin-top: 6px;">Read more</button>
+
+    
+    <!-- <div id="equalizer">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div> -->
   </div>
-  <div id="controls">
-    <button onclick="prevSong()">Prev</button>
-    <button onclick="shuffleSong()">Play/Shuffle</button>
-    <button onclick="nextSong()">Next</button>
-    <button onclick="toggleVideo()">Show/Hide Video</button>
+
+  <div id="music-player">
+    <div id="now-playing-wrapper">
+      <div id="now-playing">Loading track...</div>
+    </div>
+    <div id="controls">
+      <button onclick="prevSong()">Prev</button>
+      <button onclick="shuffleSong()">Play/Shuffle</button>
+      <button onclick="nextSong()">Next</button>
+      <button onclick="toggleVideo()">Show/Hide Video</button>
+    </div>
+    <div id="player"></div>
   </div>
-  <div id="player"></div> <!-- YouTube iframe -->
 </div>
 
 <script src="script.js"></script>
