--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   color: #00ff00;
   font-size: 1.2rem;
 }
-    @keyframes scroll-text {
+    @keyframes scroll-left {
       0% { transform: translateX(100%); }
       100% { transform: translateX(-100%); }
     }
