--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <input id="search-bar" type="text" placeholder="Search..."
            style="width: 100%; padding: 10px; font-size: 16px; background-color: black; color: #00ff00; border: 1px solid #00ff00; text-align: center;">
     <div id="search-results"
-         style="position: absolute; max-height: 300px; overflow-y: auto; background-color: black; color: #00ff00; border: 1px solid #00ff00; padding: 8px; margin-top: 4px; display: none;">
+         style="position: absolute; max-height: 300px; overflow-y: auto; background-color: black; color: #00ff00; border: 1px solid #00ff00; padding: 5px; margin-top: 4px; display: none; borderBottom:1px solid #222;">
     </div>
   </div>
 </div>
