--- a/index.html
+++ b/index.html
@@ -3,201 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Cool Guy Music Mix</title>
-  <style>
-.upcoming-track-link {
-  color: #00ff00;
-  text-decoration: none;
-}
-.upcoming-track-link:hover {
-  color: yellow !important;
-}
-    body {
-      background-color: black;
-      color: limegreen;
-      font-family: 'Courier New', Courier, monospace;
-      font-size: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
+  <link rel="stylesheet" href="style.css" />
 
-    #winamp-container {
-      display: flex;
-      background-color: black;
-      border: 2px solid gray;
-      padding: 16px;
-      width: 1530px;
-      font-family: 'Courier New', Courier, monospace;
-      color: limegreen;
-    }
-
-    #album-info {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-right: 16px;
-    }
-
-    #album-art {
-      width: 150px;
-      height: 150px;
-      object-fit: cover;
-      margin-bottom: 8px;
-      border: 2px solid limegreen;
-      border-radius: 0px; /* square frame */
-      box-shadow: 0 0 10px limegreen;
-      transition: box-shadow 0.3s ease;
-    }
-
-    #album-art:hover {
-      box-shadow: 0 0 20px white;
-    }
-
-    #album-name, #album-year {
-      text-align: center;
-      font-size: 14px;
-    }
-
-    #artist-summary {
-      font-size: 1rem;
-  line-height: 1.4;
-   overflow-y: auto;
-  scroll-behavior: smooth;
-  overflow: hidden;
-  white-space: pre-wrap;
-  color: #00ff00;
-  padding: 23px;
-  box-sizing: border-box;
-}
-
-
-    #equalizer {
-      display: flex;
-      justify-content: center;
-      margin-top: 10px;
-      height: 20px;
-    }
-
-    .bar {
-      width: 4px;
-      height: 100%;
-      margin: 0 2px;
-      background: limegreen;
-      animation: equalizer 1s infinite;
-    }
-
-    .bar:nth-child(1) { animation-delay: 0s; }
-    .bar:nth-child(2) { animation-delay: 0.1s; }
-    .bar:nth-child(3) { animation-delay: 0.2s; }
-    .bar:nth-child(4) { animation-delay: 0.3s; }
-    .bar:nth-child(5) { animation-delay: 0.4s; }
-
-    @keyframes equalizer {
-      0% { transform: scaleY(1); }
-      50% { transform: scaleY(2); }
-      100% { transform: scaleY(1); }
-    }
-
-    #music-player {
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    #now-playing-wrapper {
-      width: 100%;
-      overflow: hidden;
-      white-space: nowrap;
-      position: relative;
-      height: 32px;
-      margin-bottom: 16px;
-    }
-    .rpg-box {
-  padding: 8px;
-  width: 100%;
-  max-width: 600px;
-  height: 100%;
-  overflow: hidden;
-  position: relative;
-  font-family: monospace;
-  color: #00ff00;
-  white-space: pre-line;
-}
-
-.rpg-text {
-  height: 100%;
-  overflow-y: hidden;
-}
-
-    #now-playing {
-      display: inline-block;
-      position: absolute;
-      left: 0;
-      top: 0;
-      white-space: nowrap;
-    }
-
-    .scrolling {
-      animation: scroll-text 10s linear infinite;
-    }
-    .scrolling-text {
-  white-space: nowrap;
-  overflow: hidden;
-  display: block;
-  animation: scroll-left 20s linear infinite;
-  color: #00ff00;
-  font-size: 1.2rem;
-}
-    @keyframes scroll-left {
-      0% { transform: translateX(100%); }
-      100% { transform: translateX(-100%); }
-    }
-
-    #controls {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      margin-bottom: 16px;
-    }
-
-    #controls button {
-      background-color: #222;
-      color: limegreen;
-      border: 1px solid gray;
-      font-size: 16px;
-      padding: 8px 16px;
-      cursor: pointer;
-      margin: 4px;
-    }
-
-    #controls button:hover {
-      background-color: limegreen;
-      color: black;
-    }
-
-    #player {
-      margin-top: 10px;
-      width: 560px;
-      height: 315px;
-      display: block;
-    }
-
-  
-
-  </style>
 </head>
 
 <body>
-  <div id="search-container"
-     style="position: absolute; top: 10px; left: 0; right: 0; z-index: 9999; display: flex; justify-content: center;">
+  <div id="search-container">
   <div style="width: 100%; max-width: 600px;">
-    <input id="search-bar" type="text" placeholder="Search..."
-           style="width: 100%; padding: 10px; font-size: 16px; background-color: black; color: #00ff00; border: 1px solid #00ff00; text-align: center;">
-    <div id="search-results"
-         style="position: absolute; max-height: 300px; overflow-y: auto; background-color: black; color: #00ff00; border: 1px solid #00ff00; padding: 5px; margin-top: 4px; display: none; borderBottom:1px solid #222;">
+    <input id="search-bar" type="text" placeholder="Search...">
+    <div id="search-results">
     </div>
   </div>
 </div>
@@ -216,7 +30,7 @@
     </div>
     <button id="summary-toggle">Read more</button>
     
-<button id="summary-toggle" style="display: none; margin-top: 6px;">Read more</button>
+<button id="summary-toggle">Read more</button>
 
     
     <!-- <div id="equalizer">
@@ -238,11 +52,17 @@
       <button onclick="nextSong()">Next</button>
       <button onclick="toggleVideo()">Show/Hide Video</button>
     </div>
+    <div id="search-container-mobile"> 
+      <div style="width: 100%; max-width: 600px;display: flex; align-items: center;">
+      <input id="search-bar-mobile" type="text" placeholder="Search...">
+      <div id="search-results-mobile">
+      </div>
+    </div></div>
     <div id="player"></div>
   </div>
 
   
-  <div id="upcoming-tracks" style="margin-left: 20px; background-color: #111; padding: 10px; border: 1px solid #0f0; width: 250px; font-size: 0.9rem; color: #0f0;">
+  <div id="upcoming-tracks">
     <!-- Next 10 tracks will load here -->
   </div>
   
